front page slider on mobile fix

--- a/sites/all/themes/slac/sass/blocks.scss
+++ b/sites/all/themes/slac/sass/blocks.scss
@@ -819,7 +819,7 @@ a.submit-feedback {
     }
   }
   .frontpage-news-slider .views-field-nothing .body, .frontpage-slac-science .view-header .views-field-nothing .body{
-    display: none;
+    display: none !important;
   }
 
   .frontpage-top-links .desktop{display: none;}
